k8s/go-shard-ing.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-shard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - go-shard.k8s.cluster
  rules:
    - host: go-shard.k8s.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-shard
                port:
                  number: 8080
